# snake-game

./: Makefile  README.md  main.py  pyproject.toml
.claude/: instructions.md
static/css/: style.css
static/js/: game.js
templates/: index.html
tests/: test_main.py
